# basic-computer-vision

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: network.h  readcsv.h
src/: imageSegmenter.cpp  img2csv.cpp  main.cpp  network.cpp  networkbeforechanges.cpp  readcsv.cpp
tools/: a.out  checkendianness.cpp  idx2csv.cpp
